Fix Vercel build configuration
- Add root package.json with proper build script that navigates to frontend
- Simplify vercel.json configurations to avoid conflicts
- Ensure build command runs from correct directory

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,18 +1,5 @@
 {
   "framework": "docusaurus",
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build"
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ]
+  "public": true,
+  "trailingSlash": false
 }
