--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,4 @@
 {
-  "framework": "docusaurus",
-  "builds": [
-    {
-      "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build"
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
-  ],
-  "public": true
+  "public": true,
+  "trailingSlash": false
 }
