--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,4 @@
-{
-  "framework": "docusaurus",
-  "public": true,
-  "trailingSlash": false
+ { "routes": [
+    { "src": "/(.*)", "dest": "/index.html" }
+  ]
 }
