--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "cd frontend && npm ci && npm run build",
+    "build": "cd frontend && npm run build",
     "start": "cd frontend && npm run serve",
     "prebuild": "cd frontend && npm install"
   },
