Final Vercel deployment configuration
- Update package.json with proper project name and build scripts
- Set trailingSlash to true for proper Vercel routing
- Ensure all configurations are optimized for Vercel deployment

--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "physical_ai_book",
+  "name": "physical-ai-book",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "build": "cd frontend && npm run build",
+    "start": "cd frontend && npm run serve"
+  },
   "engines": {
     "node": ">=20.0"
   }
