--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "npm --prefix frontend run build",
-    "start": "npm --prefix frontend run serve"
+    "build": "docusaurus build",
+    "start": "docusaurus build"
   },
   "engines": {
     "node": ">=20.0"
   }
 }
+
 
