--- a/package.json
+++ b/package.json
@@ -1,14 +1,4 @@
 {
   "name": "physical-ai-book",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "build": "docusaurus build",
-    "start": "docusaurus build"
-  },
-  "engines": {
-    "node": ">=20.0"
-  }
+  "private": true
 }
-
-
