--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,10 +1,25 @@
+
 {
   "version": 2,
   "builds": [
     {
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "build" }
+      "config": {
+        "distDir": "build"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ],
+  "retries": [
+    {
+      "source": "/(.*)",
+      "destination": "/"
     }
   ]
 }
