--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
-  "name": "physical-ai-book",
-  "private": true
+  "name": "physical-ai-book-docs",
+  "version": "0.1.0",
+  "scripts": {
+    "start": "docusaurus start",
+    "build": "docusaurus build",
+    "postinstall": "chmod +x ./node_modules/.bin/docusaurus"
+  },
+  "dependencies": {
+    "docusaurus": "^2.x.x"
+  }
 }
