--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,30 @@
 {
-  "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
+  "cleanUrls": true,
+  "trailingSlash": false,
+  "headers": [
+    {
+      "source": "/assets/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/(.+\\.(js|css|png|jpg|jpeg|gif|webp|avif|ico|bmp|svg|woff|woff2|ttf)$)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/((?!api\\/|assets\\/|static\\/|favicon\\.ico|sitemap\\.xml|robots\\.txt).*)",
+      "destination": "/index.html"
+    }
   ]
 }
