--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,30 +1,13 @@
 {
-  "cleanUrls": true,
-  "trailingSlash": false,
-  "headers": [
+  "routes": [
     {
-      "source": "/assets/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
+      "src": "/api/(.*)",
+      "dest": "/api/index.js"
     },
     {
-      "source": "/(.+\\.(js|css|png|jpg|jpeg|gif|webp|avif|ico|bmp|svg|woff|woff2|ttf)$)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/((?!api\\/|assets\\/|static\\/|favicon\\.ico|sitemap\\.xml|robots\\.txt).*)",
-      "destination": "/index.html"
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
+
 }
